[project]
name = "deep-trace"
version = "0.1.0"
description = ""
authors = [
    { name = "Renato Cotrim Maciel", email = "renato.cmaciel@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "selenium (>=4.29.0,<5.0.0)",
    "crewai[tools] (>=0.108.0,<0.109.0)",
    "databricks-sdk (>=0.46.0,<0.47.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
